# secondProject

./: CMakeLists.txt  main.cpp
cachePackage/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h
clientPackage/: ClientHandler.h  MyClientHandler.cpp  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h
problemPackage/: CreateMatrix.cpp  CreateMatrix.h  MatrixProblem.cpp  MatrixProblem.h  ProblemCreator.h
searchPackage/: AStar.h  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.h  ISearcher.h  Searchable.h  SearchableMatrix.h  Searcher.h  State.cpp  State.h
serverPackage/: MainBoot.h  MyParralelServer.cpp  MyParralelServer.h  MySerialServer.cpp  MySerialServer.h  Server.h
solverPackage/: Solver.h  StringReverser.cpp  StringReverser.h
test/: MatrixDomain.h
utils/: MaxPriorityQueue.h  MinPriorityQueue.h  MyPriorQueue.h  MyPriority.h  MyPriorityQueue.h  MyPriorityStack.h  MyUnorderedSet.h  Point.h  RegularQueue.h  SearchClient.h  SearchSolver.h
